# taskrs-server/src/api/mod.rs
@@ -1,3 +1,4 @@
 pub mod users;
 pub mod auth;
 pub mod permissions;
+pub mod categories;
